--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,42 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.primary-color { 
+  background: #FAFAFA;
+}
+
+.secondary-color {
+  background: #FFFFFF;
+}
+
+.button-contained {
+  height: 46px;
+  width: 159px;
+  left: 682px;
+  top: 551px;
+  border-radius: 4px;
+  padding: 0px 15px 0px 15px;
+}
+
+.show-more {
+  font-family: Helvetica;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: 0px;
   text-align: center;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.zoe-logo {
+  position: absolute;
+  left: 2.2%;
+  right: 91.39%;
+  top: 2%;
+  bottom: 91.83%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav {
+  position: absolute;
+  width: 1366px;
+  height: 80px;
+  left: 0px;
+  top: 0px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
