--- a/src/App.css
+++ b/src/App.css
@@ -200,15 +200,18 @@
 }
 
 .pagination-button {
+  font-family: 'Helvetica';
   border: none;
   color: #5C7BEB;
   font-weight: 700;
   font-size: 16px;
   line-height: 18px;
+  background-color: transparent;
 }
 
 button:disabled.pagination-button {
   color: #B4B4B4;
+  background-color: transparent;
 }
 
 button:hover{
